--- a/src/home/templates/index.html
+++ b/src/home/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
-{%block title %}Main{% endblock %}
+{% block title %}AAAAAAAA{% endblock %}
 
-{% block body %}Schedule project{% endblock %}
+{% block page_name %}ААА{% endblock %}
+
+{% block content %}
+
+{% endblock %}
