--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -3,8 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Schedule :: {% block title %}XXX{% endblock %}</title>
+    <style>
+        body {
+            background-color: #002207;
+            font-family: Arial, Helvetica, sans-serif;
+            color: white;
+            padding-top: 48px;
+        }
+        a {
+            color: lime;
+        }
+        a:visited {
+            color: silver;
+        }
+        a:hover {
+            color: red;
+        }
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 48px;
+            background-color: #015200;
+        }
+        .logo {
+            font-size: 36px;
+            text-decoration: none;
+            margin-left: 10px;
+            margin-right: 10px;
+            color: lime;
+        }
+    </style>
 </head>
+
 <body>
-{% block body %}{% endblock %}
+    <header>
+            <a class="logo" href="/" aria-label="Bootstrap"><span class="logo">B</span></a>
+            <span class="menu-item"><a href="/">AAA</a></span>
+            <span class="menu-item"><a href="/">BBB</a></span>
+    </header>
+    <h1>{% block page_name %}{% endblock %}</h1>
+
+    <div>
+        {% block content %}{% endblock %}
+    </div>
 </body>
+
 </html>
