добавлены базы данных, шаблоны, страницы, сделаны миграции

--- a/src/home/templates/index.html
+++ b/src/home/templates/index.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}AAAAAAAA{% endblock %}
-
-{% block page_name %}ААА{% endblock %}
-
 {% block content %}
+<form class="mt-5" action="">
+    <div class="form-group">
+        <label class="row" for="exampleFormControlSelect1">Example select</label>
+        <div class="row">
+            <select class="form-control col-lg-10" id="exampleFormControlSelect1">
+              <option>10702417</option>
+            </select>
+            <div class="col-lg-2">
+                <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+        </div>
 
+    </div>
+</form>
 {% endblock %}
