--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -1,53 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/style.css">
     <meta charset="UTF-8">
     <title>Schedule :: {% block title %}XXX{% endblock %}</title>
-    <style>
-        body {
-            background-color: #002207;
-            font-family: Arial, Helvetica, sans-serif;
-            color: white;
-            padding-top: 48px;
-        }
-        a {
-            color: lime;
-        }
-        a:visited {
-            color: silver;
-        }
-        a:hover {
-            color: red;
-        }
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 48px;
-            background-color: #015200;
-        }
-        .logo {
-            font-size: 36px;
-            text-decoration: none;
-            margin-left: 10px;
-            margin-right: 10px;
-            color: lime;
-        }
-    </style>
 </head>
 
 <body>
     <header>
-            <a class="logo" href="/" aria-label="Bootstrap"><span class="logo">B</span></a>
-            <span class="menu-item"><a href="/">AAA</a></span>
-            <span class="menu-item"><a href="/">BBB</a></span>
+            <a class="logo" href="/" aria-label="Bootstrap"><span class="logo">Расписание ФИТР</span></a>
     </header>
-    <h1>{% block page_name %}{% endblock %}</h1>
 
-    <div>
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </html>
