--- a/src/home/templates/result.html
+++ b/src/home/templates/result.html
@@ -5,7 +5,7 @@
         <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th scope="col">ПАРА</th>
+            <th scope="col">Пара</th>
             <th scope="col">{{day}}</th>
         </tr>
     </thead>
